src/test/deca/syntax/valid/created/ops_unary/testUnary.deca
// Description:
//      Test du !
// Resultats:
//      OK
{
    int c = 5;
    int a;
    boolean k = !true;
    //int v = ;
}
