src/test/deca/syntax/invalid/created/wrong_order_in_bloc/assign_without_value.deca
// Description :
// Fichier 3 declarations de variables.
//
// Resultats :
// Lexer -> OK 
// Parser -> Error Ligne 13 : mismatched input ';' expecting ...



{
    int a, c = 5;
    boolean k = !true;
    int v = ;
}
